scrollbar, date, parallax, padding, margin fix

--- a/sass/2d.scss
+++ b/sass/2d.scss
@@ -2,13 +2,14 @@
 
         /* Designing for scroll-bar */
         ::-webkit-scrollbar {
-            width: 6px;
+            width: 8px;
         }
 
         /* Track */
         ::-webkit-scrollbar-track {
             background: gainsboro;
             border-radius: 5px;
+            background: #cccccc;
         }
 
         /* Handle */
@@ -64,6 +65,7 @@
    overflow-x: hidden;
    overflow-y: auto;
    position: absolute;
+   margin-left: -8px;
    top:0;
    left: 0;
    right: 0;
@@ -94,11 +96,12 @@
   font-style: italic;
   position: absolute;
   display: block;
-  padding-right: 5%;
   }
 
 #content_welcome{
-  padding: 9%;
+  padding-right: 9%;
+  padding-top: 9%;
+  padding-bottom: 9%;
   margin-top: 56.3%;
   min-height: 90vh;
   left: 0;
@@ -108,11 +111,16 @@
 
   section{
     font-size: 12vh;
+    padding-left: 30%;
   }
 
   p#welcome{
-    padding-left: 30%;
-    font-size: 140%;
+    padding-left: 60%;
+    font-size: 100%;
+  }
+  p#paikka{
+    font-size:145%;
+    padding-left:20%;
   }
 }
 
